<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_DebounceMode" Id="{0828f57c-c54a-45b1-8e20-7f418f6c1f95}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DebounceMode :
(
	RawInput,
	SimpleFlickerFilter,
	EdgeDetectFilter,
	MovingAverage
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>