<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_SensorSimulationMode" Id="{d6bc7f14-6097-4f51-a237-0dc3a3c0dded}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SensorSimulationMode :
(
	InputDriven,		//Follows the state of the SimulationInput property
	Periodic			//Follows a 50% duty cycle at the period specified in ms by SimulationInput);
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>