<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_SensorBase_HMI" Id="{851a3f8a-d814-4c16-8ad8-aa39e596a591}">
    <Declaration><![CDATA[TYPE ST_SensorBase_HMI :
STRUCT
	//Status information
	eDebounceMode		: E_DebounceMode;
	tDebounceTime 		: TIME;
	bInverted			: BOOL;
	eSimulationMode		: E_SensorSimulationMode;
	nSimulationInput	: DINT;
	tTimeActive			: TIME;
	tTimeInactive		: TIME;
	
	//Control information
	bHMIControlAvailable	: BOOL;		//Set TRUE *FROM PLC* when HMI requests can be processed
	bIncomingHMIRequest 	: BOOL;		//Pulses TRUE when an HMI request is issued
		bHMICommandConfirmation	: BOOL;		//Confirms receipt and subsequent processing of the command sent by the HMI
	
	bSetDebounceModeHMIRequest 		: BOOL;		//HMI requests to change the Debounce mode of the sensor
	eSetDebounceModeHMIValue 		: E_DebounceMode;			//HMI requested Debounce mode of the sensor
	bSetDebounceTimeHMIRequest		: BOOL;		//HMI requests to change the Debounce time of the sensor
	tSetDebounceTimeHMIValue 		: TIME;	//HMI requested Debounce mode of the sensor
	bSetSimulationModeHMIRequest	: BOOL;		//HMI requests to change the simulation mode of the sensor
	eSetSimulationModeHMIValue		: E_SensorSimulationMode;	//HMI Requested Simulation mode of the sensor
	bSetSimulationInputHMIRequest	: BOOL;		//HMI requests to set the simulation input value
	nSetSimulationInputHMIValue		: DINT;		//HMI requested simulation input value
	bInvertedHMIRequest				: BOOL;		//HMI requests that the sensor operate in an inverted state
	bUninvertedHMIRequest			: BOOL;		//HMI requests that the sensor operate in an uninverted state
	
	bSimulateOperationHMIRequest 	: BOOL;		//HMI requests to change the component to simulation mode
	bStandardOperationHMIRequest	: BOOL;		//HMI requests to change the component to standard mode

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>